Update personal data

--- a/index.html
+++ b/index.html
@@ -14430,13 +14430,16 @@ function extend() {
                 <div class="summary">
                     <p>
                         Who I'm? 
-Currently working as a Software Architect at Tokenlab, São Carlos. I have worked on several projects in different areas of computing. Throughout my career, I followed a more focused path to back-end applications, despite having diverse experiences in front-end and mobile applications.
-Also try to contribute to the Open Source community in various projects such as ExpressJS. I have experience with various programming languages, but for some time I have been dedicated to JS technologies.
+Currently Software Engineering Lead at Ditto Music based in Sao Carlos. I have worked on several projects in different areas of Systems Information and Computer Science. Throughout my career, I followed a more focused path to back-end applications, despite having diverse experiences in front-end and mobile applications.
+Also try to contribute to the Open Source community in various projects such as ExpressJS. During the pass 8 years I've had experience with many programming languages, but for a long time I have been dedicated to JS technologies.
                     </p>
-                    <p>In 2010, I joined the course in Computer Science from the University of São Paulo, in São Carlos unit, after making a half of Mechanical Engineering from UNESP. In 2015, I transferred my course to Information Systems, at USP, where currently study.
+                    <p>In 2010, I joined the course in Computer Science from the University of São Paulo, in Sao Carlos unit, after making a half of Mechanical Engineering from UNESP. In 2015, I transferred my course to Information Systems, at USP, where currently study.
 This year I started working on a project together with colleagues from the University, that has become a Startup, the InviteClub.</p>
 <p>During the year 2016 I was involved with my work at Tokenlab, my university and with parallel projects. I am keen to learn new technologies, interesting projects that have a direct impact on the life of society. I have a special interest in Software Architecture, Security Engineering and IoT.
                     </p>
+                    <p>
+                        In 2017 I've started to work at <a href="www.dittomusic.com"><b>Ditto Music</b></a> where I'm currently working. My responsabilities at Ditto Music is to Lead a development team to build amazing applications to Music Industry. Is part of my position design the architecture, manage the process and delivery good quality Softwares.
+                    </p> 
                 </div><!--//summary-->
             </section><!--//section-->
             
@@ -14446,8 +14449,23 @@ This year I started working on a project together with colleagues from the Unive
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Full Back-end/Front-end Web Developer <span class="badge">currently</span></h3>
+                            <h3 class="job-title">Software Engineering Lead <span class="badge">currently</span></h3>
                             <div class="time">2014</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Tokenlab, Sao Carlos</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>
+                          Design Software Architectures, manage development, develop and test softwares.
+                        </p>  
+                    </div><!--//details-->
+                </div><!--//item-->
+                
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Full Back-end/Front-end Web Developer <span class="badge">currently</span></h3>
+                            <div class="time">2014 - 2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Tokenlab, Sao Carlos</div>
                     </div><!--//meta-->
