--- a/index.html
+++ b/index.html
@@ -14464,7 +14464,7 @@ This year I started working on a project together with colleagues from the Unive
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Full Back-end/Front-end Web Developer <span class="badge">currently</span></h3>
+                            <h3 class="job-title">Full Back-end/Front-end Web Developer</h3>
                             <div class="time">2014 - 2017</div>
                         </div><!--//upper-row-->
                         <div class="company">Tokenlab, Sao Carlos</div>
