Currently experience changes

--- a/index.html
+++ b/index.html
@@ -14450,9 +14450,9 @@ This year I started working on a project together with colleagues from the Unive
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">Software Engineering Lead <span class="badge">currently</span></h3>
-                            <div class="time">2014</div>
+                            <div class="time">2017</div>
                         </div><!--//upper-row-->
-                        <div class="company">Tokenlab, Sao Carlos</div>
+                        <div class="company">DITTO Music, Sao Carlos</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>
