Add Cover Letter

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
                 
                 <h1 class="name">Álvaro Paçó</h1>
                 <h3 class="tagline">Software Engineering Lead at <a href="https://www.dittomusic.com/">Ditto Music</a></h3>
-                <h4><span class="label label-info"><i class="fa fa-file-text-o" aria-hidden="true"></i><a href="https://goo.gl/wbTR8r"> Download my CV</a></span></h4>
+                <h4>
+                  <span class="label label-info">
+                    <i class="fa fa-file-text-o" aria-hidden="true"></i> <a href="https://goo.gl/wbTR8r"> Download my CV</a>
+                    <i class="fa fa-file-text-o" aria-hidden="true"></i> <a href="https://goo.gl/adqre4"> Download my Cover Letter</a>
+                  </span>
+                </h4>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
