--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
             <div class="education-container container-block">
                 <h2 class="container-block-title">Education</h2>
                 <div class="item">
-                    <h4 class="degree">BSc in Information Sytems - <span class="badge">in-course</span></h4>
+                    <h4 class="degree">BSc in Information Sytems</h4>
                     <h5 class="meta">University of Sao Paulo</h5>
                     <div class="time">2016 - *</div>
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">MSc in Computer Science - <span class="badge">interrupted</span></h4>
+                    <h4 class="degree">MSc in Computer Science</h4>
                     <h5 class="meta">University of Sao Paulo</h5>
                     <div class="time">2010 - 2015</div>
                 </div><!--//item-->
