Updating Insterest list

--- a/index.html
+++ b/index.html
@@ -147,13 +147,14 @@
             <div class="interests-container container-block">
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>Computation</li>
-                    <li>Aviation</li>
-                    <li>Pets</li>
+                    <li>IT and Computer Science</li>
+                    <li>Aviation and Embed Technologies</li>
                     <li>Surf</li>
+                    <li>Travel</li>
                     <li>Music</li>
-                    <li>Cooking</li>
-                    <li>Voluntary work</li>
+                    <li>Cook</li>
+                    <li>Tattoo</li>
+                    <li>Gym and Health</li>
                 </ul>
             </div><!--//interests-->
             
