Adding twitter timeline

--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
                     <li>Tattoo</li>
                     <li>Gym and Health</li>
                 </ul>
-            </div><!--//interests-->
+            </div>
+            <div class="interests-container container-block">
+                <a class="twitter-timeline" href="https://twitter.com/alvaropaco?ref_src=twsrc%5Etfw">Tweets by alvaropaco</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            </div>
+            <!--//interests-->
             
         </div><!--//sidebar-wrapper-->
         
