Add new interest sections

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
                 <h2 class="container-block-title">Interests</h2>
                 <ul class="list-unstyled interests-list">
                     <li>IT and Computer Science</li>
+                    <li>Cryptocurrencies</li>
+                    <li>Hacking and Security Engineering</li>
+                    <li>Astronomy</li>
                     <li>Aviation and Embed Technologies</li>
                     <li>Surf</li>
                     <li>Travel</li>
