--- a/index.html
+++ b/index.html
@@ -92,9 +92,15 @@
                 <h4>
                   <span class="label label-info">
                     <i class="fa fa-file-text-o" aria-hidden="true"></i> <a href="https://goo.gl/wbTR8r"> Download my CV</a>
+                  </span>
+                  <span class="label label-info">
                     <i class="fa fa-file-text-o" aria-hidden="true"></i> <a href="https://goo.gl/adqre4"> Download my Cover Letter</a>
                   </span>
                 </h4>
+                <div>
+                    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/alvaropaco" data-format="inline" data-related="false"></script>
+                </div>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
