--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </h4>
                 <div>
                     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-<script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/alvaropaco" data-format="inline" data-related="false"></script>
+<script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/alvaropaco" data-format="hover" data-related="false" data-text="Alvaro Paçó"></script>
                 </div>
             </div><!--//profile-container-->
             
