Update contact information

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto:%20alvaropaconeto@gmail.com">alvaropaconeto@gmail.com</a></li>
                     <li class="phone"><i class="fa fa-phone"></i><a href="tel:+55 16 99110-1415">+55 16 99110-1415</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://alvaropaco.com/alvaropaco.rf.gd" target="_blank">alvaropaco.rf.gd</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="https://github.com/alvaropaco/my-resume" target="_blank">https://github.com/alvaropaco/my-resume</a></li>
                     <li class="linkedin"><i class="fab fa-linkedin"></i><a href="http://linkedin.com/in/alvaropaco/" target="_blank">linkedin.com/in/alvaropaco/</a></li>
-                    <li class="github"><i class="fab fa-github"></i><a href="http://github.com/alvaro-paco" target="_blank">github.com/alvaro-paco</a></li>
-                    <li class="twitter"><i class="fab fa-stack-overflow"></i><a href="http://stackoverflow.com/users/2816527/alvaropaco" target="_blank">@alvaropaco</a></li>
+                    <li class="github"><i class="fab fa-github"></i><a href="http://github.com/alvaropaco" target="_blank">github.com/alvaropaco</a></li>
+                    <li class="twitter"><i class="fab fa-stack-overflow"></i><a href="https://stackoverflow.com/users/2816527/alvaropaco" target="_blank">@alvaropaco</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
