--- a/index.html
+++ b/index.html
@@ -196,7 +196,22 @@ This year I started working on a project together with colleagues from the Unive
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Engineering Lead <span class="badge">currently</span></h3>
+                            <h3 class="job-title">Professor Coordinator</h3>
+                            <div class="time">2018</div>
+                        </div><!--//upper-row-->
+                        <div class="company">IFSuldeminas, Poços de Caldas</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>
+                          Manage Software Projects coordenating the degree students.
+                        </p>  
+                    </div><!--//details-->
+                </div><!--//item-->
+              
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Software Engineering Lead</h3>
                             <div class="time">2017</div>
                         </div><!--//upper-row-->
                         <div class="company">DITTO Music, Sao Carlos</div>
