--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="summary">
                     <p>
                         Who I'm? 
-Currently Software Engineering Lead at Ditto Music based in Sao Carlos. I have worked on several projects in different areas of Systems Information and Computer Science. Throughout my career, I followed a more focused path to back-end applications, despite having diverse experiences in front-end and mobile applications.
+Currently a Principal Software Engineering Lead at BTG PActual based in Sao Paulo. I have worked on several projects in different areas of Systems Information and Computer Science. Throughout my career, I followed a more focused path to back-end applications, despite having diverse experiences in front-end and mobile applications.
 Also try to contribute to the Open Source community in various projects such as ExpressJS. During the pass 8 years I've had experience with many programming languages, but for a long time I have been dedicated to JS technologies.
                     </p>
                     <p>In 2010, I joined the course in Computer Science from the University of São Paulo, in Sao Carlos unit, after making a half of Mechanical Engineering from UNESP. In 2015, I transferred my course to Information Systems, at USP, where currently study.
@@ -186,7 +186,10 @@ This year I started working on a project together with colleagues from the Unive
                     </p>
                     <p>
                         In 2017 I've started to work at <a href="www.dittomusic.com"><b>Ditto Music</b></a> where I'm currently working. My responsabilities at Ditto Music is to Lead a development team to build amazing applications to Music Industry. Is part of my position design the architecture, manage the process and delivery good quality Softwares.
+                      In 2019 I`ve left the Ditto Music to get new challenges and started to work in BTG Pactual where I occupy a Principal Software Engineer position in the RTB team.
                     </p> 
+                  <p> 
+                    I`m planning to grow in my career studing new Software Engineering process and tecniques, new technologies like Artificial Inteligence, Crypto currency, Machine Learn and Cyber security. Also I want to have a leardship position in a technology team.
                 </div><!--//summary-->
             </section><!--//section-->
             
@@ -196,14 +199,14 @@ This year I started working on a project together with colleagues from the Unive
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Professor Coordinator</h3>
-                            <div class="time">2018</div>
+                            <h3 class="job-title">Principal Software Engineering</h3>
+                            <div class="time">2019</div>
                         </div><!--//upper-row-->
-                        <div class="company">IFSuldeminas, Poços de Caldas</div>
+                        <div class="company">BTG Pactual, Sao Paulo</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                          Manage Software Projects coordenating the degree students.
+                          Design Software Architectures, manage development, develop and test softwares.
                         </p>  
                     </div><!--//details-->
                 </div><!--//item-->
