--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ This year I started working on a project together with colleagues from the Unive
                     </p>
                     <p>
                         In 2017 I've started to work at <a href="www.dittomusic.com"><b>Ditto Music</b></a> where I'm currently working. My responsabilities at Ditto Music is to Lead a development team to build amazing applications to Music Industry. Is part of my position design the architecture, manage the process and delivery good quality Softwares.
-                      In 2019 I`ve left the Ditto Music to get new challenges and started to work in BTG Pactual where I occupy a Principal Software Engineer position in the RTB team.
+                      In 2019 I`ve left the Ditto Music to get new challenges and started to work in <a href="https://www.btgpactual.com/"><b>BTG Pactual</b></a> where I occupy a Principal Software Engineer position in the RTB team.
                     </p> 
                   <p> 
                     I`m planning to grow in my career studing new Software Engineering process and tecniques, new technologies like Artificial Inteligence, Crypto currency, Machine Learn and Cyber security. Also I want to have a leardship position in a technology team.
