--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Meta -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Principal Software Engineering at BTG Pactual">
+    <meta name="description" content="Software Engineering Manager at Quero Educação">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,PHP,fullstack,software,python,angular,react,google,docker,aws,cloudfront,cloudformation,lambda,nodejs,node,c#,java,android,ios">
     <meta name="author" content="Alvaro Paçó">    
     <link rel="apple-touch-icon" sizes="57x57" href="resume/apple-icon-57x57.png">
@@ -88,7 +88,7 @@
                 </picture>
                 
                 <h1 class="name">Álvaro Paçó</h1>
-                <h3 class="tagline">Principal Software Engineering at <a href="https://www.btgpactual.com/">BTG Pactual</a></h3>
+                <h3 class="tagline">Software Engineering Manager at <a href="https://www.querobolsa.com/">Quero Educação</a></h3>
                 <h4>
                   <span class="label label-info">
                     <i class="fa fa-file-text-o" aria-hidden="true"></i> <a href="https://goo.gl/wbTR8r"> Download my CV</a>
